# marketdata

./: pyproject.toml
marketdata/: base_api.py  exceptions.py
marketdata/eodhistorical/: __init__.py  api.py  definitions.py
marketdata/eurostat/: __init__.py  api.py  tables.md
marketdata/fred/: __init__.py  api.py
marketdata/oecd/: __init__.py  api.py
marketdata/worldbank/: __init__.py  api.py
